<resources>
    <string name="app_name">Assignment2</string>
    <string name="ratings">Ratings</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="registration_form">Registration Form</string>
    <string name="rating_1_5">Rating (1-5)</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="search">Search by name, location, or rating</string>
</resources>